--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "react": "^16.13.1",
     "react-animated-css": "^1.2.1",
     "react-chartjs-2": "^2.10.0",
+    "react-compound-timer": "^1.2.0",
     "react-dnd": "^11.1.3",
     "react-dom": "^16.13.1",
     "react-draggable": "^4.4.3",
