--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "scripts": {
     "start": "NODE_ENV=development webpack-dev-server",
     "test": "./node_modules/.bin/eslint src",
-    "build": "yarn clean; NODE_ENV=production webpack --colors; cp -f dist/",
+    "build": "yarn clean; NODE_ENV=production webpack --colors",
     "clean": "rimraf dist",
     "deploy": "yarn build; surge -p dist -d https://jsanz-thesis.surge.sh; yarn clean"
   },
@@ -41,6 +41,7 @@
     "autoprefixer": "^9.8.5",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
+    "copy-webpack-plugin": "6",
     "css-loader": "^3.6.0",
     "eslint": "^7.7.0",
     "eslint-config-airbnb": "^18.2.0",
