--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "core-js": "2",
     "crypto": "^1.0.1",
     "express": "^4.17.1",
+    "face-api.js": "^0.22.2",
     "jquery": "^3.5.1",
     "lodash.debounce": "^4.0.8",
     "pitchfinder": "^2.3.1",
