--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "redux-form": "^8.3.7",
     "redux-thunk": "^2.3.0",
     "socket.io-client": "^4.3.2",
+    "tiny-timer": "^1.6.0",
     "tone": "^14.7.58",
     "uuid": "^8.3.2",
     "validator": "^13.6.0",
