--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "lodash.debounce": "^4.0.8",
     "pitchfinder": "^2.3.1",
     "random-word-slugs": "^0.1.6",
+    "randomstring": "^1.2.2",
     "react": "^16.13.1",
     "react-animated-css": "^1.2.1",
     "react-chartjs-2": "^2.10.0",
