--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "express": "^4.17.1",
     "face-api.js": "^0.22.2",
     "jquery": "^3.5.1",
+    "loading-animations-react": "^1.3.3",
     "lodash.debounce": "^4.0.8",
     "pitchfinder": "^2.3.1",
     "random-word-slugs": "^0.1.6",
