--- a/package.json
+++ b/package.json
@@ -65,12 +65,14 @@
   "dependencies": {
     "@babel/plugin-proposal-export-default-from": "^7.10.4",
     "@babel/polyfill": "^7.10.4",
+    "@fortawesome/fontawesome-free": "^6.1.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "animate.css": "^4.1.0",
     "audiobuffer-to-wav": "^1.0.0",
     "axios": "^0.21.1",
+    "babel-plugin-macros": "^3.1.0",
     "body-parser": "^1.19.0",
     "chart.js": "^2.9.3",
     "classnames": "^2.2.6",
